--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,6 +1,7 @@
 <div class="input">
-  <div class="cartao">
+  <div class="cartao" >
     <label for="cartao">Número do Cartão:</label><br />
-    <input type="text" name="cartao" id="cartao" />
+    <input type="text" name="cartao" id="cartao"/>
+    <input type="button" class="btn" value="Verificar">
   </div>
 </div>
